--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+
 html {
   height: 100%;
 }
@@ -8,7 +9,65 @@ body {
 /*  font-size: 18px;*/
   letter-spacing: 0.02em;
   text-transform: uppercase;
+	background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
 }
+#grad1 {
+  height: 200px;
+  background-color: red; /* For browsers that do not support gradients */ 
+}
+#congrats{
+	font-size: 80px;
+	border-radius: 25px;
+	opacity: 0;
+}
+
+.celebrate{
+	opacity: 0;
+	animation-name: fadeIn;
+	animation-delay: 6s;
+	animation-duration: 1s;
+	animation-fill-mode: forwards
+}
+.container{
+	margin-top: 10%;
+}
+.hideElement{
+	opacity: 0;
+}
+.hideElement:hover{
+	opacity:1;
+}
+#menu {
+    position:absolute;
+    width: 350px;
+    height: 0px;
+	left: 0px;
+    transform: translateY(-100%);
+    -webkit-transform: translateY(-100%);
+	margin-left: 0px;
+	margin-right: 0px;
+	z-index: 999;
+}
+#menu-btn{
+	z-index: 1000;
+}
+
+.panel-bod{
+	padding: 30px 30px;
+}
+
+.slide-in {
+    animation: slide-in 0.5s forwards;
+    -webkit-animation: slide-in 0.5s forwards;
+}
+
+.slide-out {
+    animation: slide-out 0.5s forwards;
+    -webkit-animation: slide-out 0.5s forwards;
+}
+.no-padding{
+	padding: 0px;
+}    
 
 .box {
   height: 140px;
@@ -45,8 +104,8 @@ body {
   padding: 0;
 	
 /*the second value is the duration in seconds of the scroll animation*/
-  -webkit-animation: scrollUp 3s 0.16s forwards;
-          animation: scrollUp 3s 0.16s forwards;
+  -webkit-animation: scrollUp 5s 0.16s forwards;
+          animation: scrollUp 5s 0.16s forwards;
 }
 ul li {
   opacity: 1;
@@ -57,6 +116,57 @@ ul li {
 	text-justify: auto;
 	text-align: center;
   margin-left: -40px;
+}
+@media screen and (max-width: 768px){
+	#congrats{
+		font-size: 50px;
+	}
+	
+	.box{
+		height: 100px;
+	}
+	
+	ul li{
+		font-size: 45px;
+	}
+}
+@media screen and (max-width: 992px){
+	#congrats{
+		font-size: 60px;
+	}
+	
+	.box{
+		height: 100px;
+	}
+	
+	ul li{
+		font-size: 50px;
+	}
+}
+@media screen and (max-width: 1200px){
+	#congrats{
+		font-size: 60px;
+		width: 80%;
+		text-justify: auto;
+	text-align: center;
+	}
+	
+	.box{
+		height: 100px;
+		width: 80%;
+	}
+	
+	ul li{
+		font-size: 60px;
+	}
+}
+@keyframes fadeIn{
+	from{
+		opacity: 0;
+	}
+	to{
+		opacity: 1;
+	}
 }
 
 @-webkit-keyframes fadeOut {
@@ -85,8 +195,9 @@ ul li {
 	
 /*changing the translateY value here helps line-up the winner with the box.*/ 
 /*Small lists - less decimals. Large lists (thousands) - more decimals*/
+/*formula for TranlateY = (-100% / #of-rows in excel file) x (#of-rows in excel file - 1) this gets it centered*/
 	to {
-    transform: translateY(-99.9965%);
+    transform: translateY(-99.993264%);
   }
 }
 @keyframes scrollUp {
@@ -97,6 +208,26 @@ ul li {
 /*changing the translateY value here helps line-up the winner with the box.*/ 
 /*Small lists - less decimals. Large lists (thousands) - more decimals*/
   to {
-    transform: translateY(-99.9965%);
+    transform: translateY(-99.993264%);
   }
+}
+@keyframes slide-in {
+	0% { transform: translateY(-100%); }
+    100% { transform: translateY(0%); }
+ 
+}
+
+@-webkit-keyframes slide-in {
+    0% { transform: translateY(-100%); }
+    100% { transform: translateY(0%); }
+}
+    
+@keyframes slide-out {
+    0% { transform: translateY(0%); }
+    100% { transform: translateY(-100%); }
+}
+
+@-webkit-keyframes slide-out {
+    0% { -webkit-transform: translateY(0%); }
+    100% { -webkit-transform: translateY(-100%); }
 }
