--- a/style.css
+++ b/style.css
@@ -1,3 +1,6 @@
+:root{
+	--doc-length: -99%;
+}
 
 html {
   height: 100%;
@@ -11,7 +14,6 @@ body {
   text-transform: uppercase;
 	background-image: linear-gradient(to top, #6a85b6 0%, #bac8e0 100%);
 }
-
 
 #grad1 {
   height: 200px;
@@ -52,6 +54,10 @@ body {
 }
 #menu-btn{
 	z-index: 1000;
+}
+
+#panel-body{
+	transform: translateY(-100%);
 }
 
 .panel-bod{
@@ -199,7 +205,7 @@ ul li {
 /*Small lists - less decimals. Large lists (thousands) - more decimals*/
 /*formula for TranlateY = (-100% / #of-rows in excel file) x (#of-rows in excel file - 1) this gets it centered*/
 	to {
-    transform: translateY(-99%);
+    transform: translateY(var(--doc-length));
   }
 }
 @keyframes scrollUp {
@@ -210,7 +216,7 @@ ul li {
 /*changing the translateY value here helps line-up the winner with the box.*/ 
 /*Small lists - less decimals. Large lists (thousands) - more decimals*/
   to {
-    transform: translateY(-99%);
+    transform: translateY(var(--doc-length));
   }
 }
 
