--- a/raffle-style-beta.css
+++ b/raffle-style-beta.css
@@ -1,4 +1,5 @@
 :root{
+  --box-margin: 18%;
 	--doc-length: -99%;
   --slider-value: 5s;
   --grad2-value: #6a85b6;
@@ -36,6 +37,12 @@ body {
 	opacity: 0;
 }
 
+.carousel-inner{
+  mask: linear-gradient(90deg, transparent 0%, black 5%, black 95%, transparent 100%);
+}
+.item-title{
+  background-color:antiquewhite;
+}
 .celebrate{
 	opacity: 0;
 	animation-name: fadeIn;
@@ -57,7 +64,7 @@ body {
 }
 
 .container{
-	margin-top: 18%;
+	margin-top: var(--box-margin);
 }
 .hideElement{
 	opacity: 0;
