--- a/raffle-style-beta.css
+++ b/raffle-style-beta.css
@@ -1,6 +1,6 @@
 :root{
   --box-margin: 18%;
-	--doc-length: -99%;
+    --doc-length: -99%;
   --slider-value: 5s;
   --grad2-value: #6a85b6;
   --grad3-value: #bac8e0;
@@ -21,7 +21,7 @@ body {
 /*  font-size: 18px;*/
   letter-spacing: 0.02em;
   text-transform: uppercase;
-	background-image: linear-gradient(to var(--grad-yAxis) var(--grad-xAxis) , var(--grad2-value) 0%, var(--grad3-value) 100%);
+    background-image: linear-gradient(to var(--grad-yAxis) var(--grad-xAxis) , var(--grad2-value) 0%, var(--grad3-value) 100%);
 }
 
 #grad1 {
@@ -32,9 +32,9 @@ body {
   background-size: cover;
 }
 #congrats{
-	font-size: 80px;
-	border-radius: 25px;
-	opacity: 0;
+    font-size: 80px;
+    border-radius: 25px;
+    opacity: 0;
 }
 
 .carousel-inner{
@@ -44,42 +44,42 @@ body {
   background-color:antiquewhite;
 }
 .celebrate{
-	opacity: 0;
-	animation-name: fadeIn;
-	animation-delay: calc(var(--slider-value) + 1s);
-	animation-duration: 1s;
-	animation-fill-mode: forwards
+    opacity: 0;
+    animation-name: fadeIn;
+    animation-delay: calc(var(--slider-value) + 1s);
+    animation-duration: 1s;
+    animation-fill-mode: forwards
 }
 .end-celebrate{
-	opacity: 1;
-	animation-name: fadeOut;
-	animation-delay: calc(var(--slider-value));
-	animation-duration: 1s;
-	animation-fill-mode: forwards
+    opacity: 1;
+    animation-name: fadeOut;
+    animation-delay: calc(var(--slider-value));
+    animation-duration: 1s;
+    animation-fill-mode: forwards
 }
 .end-now{
-	animation-name: fadeOut;
-	animation-duration: 1s;
-	animation-fill-mode: forwards
+    animation-name: fadeOut;
+    animation-duration: 1s;
+    animation-fill-mode: forwards
 }
 
 .container{
-	margin-top: var(--box-margin);
+    margin-top: var(--box-margin);
 }
 .hideElement{
-	opacity: 0;
+    opacity: 0;
 }
 .hideElement:hover{
-	opacity:1;
+    opacity:1;
 }
 
 .no-padding{
-	padding: 0px;
+    padding: 0px;
 }    
 
 .box {
   height: 140px;
-	width: 100%;
+    width: 100%;
   margin: auto;
   overflow: hidden;
   position:relative;
@@ -110,7 +110,7 @@ body {
 .list {
   margin: 0;
   padding: 0;
-	
+    
 /*the second value is the duration in seconds of the scroll animation*/
   -webkit-animation: scrollUp var(--slider-value) 0.16s forwards;
           animation: scrollUp var(--slider-value) 0.16s forwards;
@@ -121,64 +121,62 @@ ul li {
   padding: 10px;
   list-style: none;
   font-size: 80px;
-	text-justify: auto;
-	text-align: center;
+    text-justify: auto;
+    text-align: center;
   margin-left: -40px;
 }
-#names{
-  will-change:transform;
-}
+
 
 @media screen and (max-width: 768px){
-	#congrats{
-		font-size: 50px;
-	}
-	
-	.box{
-		height: 100px;
-	}
-	
-	ul li{
-		font-size: 45px;
-	}
+    #congrats{
+        font-size: 50px;
+    }
+    
+    .box{
+        height: 100px;
+    }
+    
+    ul li{
+        font-size: 45px;
+    }
 }
 @media screen and (max-width: 992px){
-	#congrats{
-		font-size: 60px;
-	}
-	
-	.box{
-		height: 100px;
-	}
-	
-	ul li{
-		font-size: 50px;
-	}
+    #congrats{
+        font-size: 60px;
+    }
+    
+    .box{
+        height: 100px;
+    }
+    
+    ul li{
+        font-size: 50px;
+    }
 }
 @media screen and (max-width: 1200px){
-	#congrats{
-		font-size: 60px;
-		width: 80%;
-		text-justify: auto;
-	text-align: center;
-	}
-	
-	.box{
-		height: 100px;
-		width: 80%;
-	}
-	
-	ul li{
-		font-size: 60px;
-	}
+    #congrats{
+        font-size: 60px;
+        width: 80%;
+        text-justify: auto;
+    text-align: center;
+    }
+    
+    .box{
+        height: 100px;
+        width: 80%;
+    }
+    
+    ul li{
+        font-size: 60px;
+    }
 }
 @keyframes fadeIn{
-	from{
-		opacity: 0;
-	}
-	to{
-		opacity: 1;
-	}
+    from{
+        opacity: 0;
+    }
+    to{
+        opacity: 1;
+    }
 }
 
 @-webkit-keyframes fadeOut {
@@ -204,28 +202,28 @@ ul li {
   from {
     transform: translateY(0);
   }
-	
+    
 /*changing the translateY value here helps line-up the winner with the box.*/ 
 /*Small lists - less decimals. Large lists (thousands) - more decimals*/
 /*formula for TranlateY = (-100% / #of-rows in excel file) x (#of-rows in excel file - 1) this gets it centered*/
-	to {
-    transform: translateY(var(--doc-length)px);
+    to {
+    transform: translateY(var(--doc-length));
   }
 }
 @keyframes scrollUp {
   from {
     transform: translateY(0);
   }
-	
+    
 /*changing the translateY value here helps line-up the winner with the box.*/ 
 /*Small lists - less decimals. Large lists (thousands) - more decimals*/
   to {
-    transform: translateY(var(--doc-length)px);
+    transform: translateY(var(--doc-length));
   }
 }
 
 @keyframes slide-in {
-	0% { transform: translateY(-100%); }
+    0% { transform: translateY(-100%); }
     100% { transform: translateY(0%); }
  
 }
