--- a/raffle-style-beta.css
+++ b/raffle-style-beta.css
@@ -36,9 +36,21 @@ body {
     border-radius: 25px;
     opacity: 0;
 }
-
-.carousel-inner{
+#carouselContainer{
+  height:60%;
+}
+#carouselExample{
   mask: linear-gradient(90deg, transparent 0%, black 5%, black 95%, transparent 100%);
+  background: rgb(0,0,0);
+  background: linear-gradient(180deg, rgba(0,0,0,0) 0%, rgba(255,255,255,0.7) 10%, rgba(255,255,255,0.7) 80%, rgba(0,212,255,0) 100%); 
+}
+.carousel-inner
+{
+  width:100%;
+
+}
+.carousel-item img{
+  margin: 2% 0% 0% 15%;
 }
 .item-title{
   background-color:antiquewhite;
