Adjusted Fonts and Edge Case
Commented out in css file for the body to have all Upper Case text.

Added in Roboto from google (bootstrap is overwriting I believe)

Fixed an edge case for which column to display: if the user wants to display all columns which means the player[1] value would be written as undefined in the Winner spreadsheet. This now just leaves a blank string.

Adjusted the modal that displays the sample of rows so that it will "show" after the [readxlsxfile] function has read the file.

--- a/raffle-style-beta.css
+++ b/raffle-style-beta.css
@@ -13,6 +13,9 @@
 
 html {
   height: 100%;
+  font-family: "Roboto", sans-serif;
+  font-weight: 300;
+  font-style: normal;
 }
 
 body {
@@ -20,7 +23,7 @@ body {
   display: flex;
 /*  font-size: 18px;*/
   letter-spacing: 0.02em;
-  text-transform: uppercase;
+  /* text-transform: uppercase; */
     background-image: linear-gradient(to var(--grad-yAxis) var(--grad-xAxis) , var(--grad2-value) 0%, var(--grad3-value) 100%);
 }
 
